--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="head__container container">
             <h1 class="head__title">Proyecto Final de PHP y SQL</h1>
             <p class="head__paragraph">Bienvenidos a mi proyecto final, donde tengo que vincular código en PHP, una base de datos y diferentes páginas que contengan vistas diferentes dependiendo del perfil de la persona, que pueden ser : visitante, usuario o administrador.</p>
-            <a href="#" target="_blank" class="cta">Trabajo final - GitHub</a>
+            <a href="https://github.com/KendraLambillon/Proyecto-Final-PHP" target="_blank" class="cta">Trabajo final - GitHub</a>
         </section>
     </header>
 
