Estructura basica de la web

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <a href="#" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Noticias</a>
+                    <a href="./views/noticias.html" class="nav__links">Noticias</a>
                 </li>
                 <li class="nav__items">
                     <a href="#" class="nav__links">Registro</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Login</a>
+                    <a href="./views/login.html" class="nav__links">Login</a>
                 </li>
                 <img src="./assets/img/close.svg" alt="close" class="nav__close">
             </ul>
@@ -192,7 +192,7 @@
                         <a href="#" class="nav__links">Inicio</a>
                     </li>
                     <li class="nav__items">
-                        <a href="#" class="nav__links">Noticias</a>
+                        <a href="./views/noticias.html" class="nav__links">Noticias</a>
                     </li>
                     <li class="nav__items">
                         <a href="#" class="nav__links">Registro</a>
